# aplustools

./: -pre-commit-config.yaml  .coveragerc  .gitignore  .pre-commit-config.yaml  .pypirc  0.1.4_checklist.txt  0.1.5_checklist.txt  CONTRIBUTING.md  PyLibStyleChoices.md  README.md  SECURITY.md  TODO  aps_build_master.bat  aps_build_master.sh  apt_build_master.bat  apt_build_master.sh  build.bat  count_loc.bat  cu.txt  dev_mode.bat  dev_mode.sh  install.bat  install2.bat  install3.bat  mypy_typing  newtest.py  othertest.py  pyproject.toml  requirements-dev.txt  run_sphinx.bat  run_tests.bat  setup.py  test.db  test.md  test.py  test_coverage.bat  test_coverage.sh  testing.py  twine.txt
.github/workflows/: linux-test.yml  macos-test.yml  pre-commit.yml  publish-wiki.yml  test-package.yml
aplustools/: REMEMBER.txt  __init__.py  _direct_functions.py  adultswork.py  childsplay.py  cli.py  database.py  direct_functions.py  direct_functions_sub.py  enviornment.py  environment.py  genpass.py  gitupdater-gui.py  imagetools.py  install_all_dependencies.py  logs.py  run_tests.py  setdirtoex.py  system.py  tests.py  tzest.py  update.py  updaters.py  webtools.py
aplustools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aplustools/data/: __init__.py  _direct_functions.py  advanced_imagetools.py  compressor.py  compressor_new.txt  database.py  database_new.py  direct_functions.py  faker.py  github-updater-cmd.py  github-updater-none.py  gitupdater-cmd.py  gitupdater-gui.py  gitupdater-none.py  gitupdater.py  imagetools.py  integrated-gitupdater-gui.py  small_test.py  test.py  unien.py  updaters.py  upgraded_imagetools.py
aplustools/data/update/.pyupdater/: config.pyu
aplustools/io/: __init__.py  _direct_functions.py  dd.py  environment.py  loggers.py  system_Test.py
aplustools/io/gui/: __init__.py  _direct_functions.py  balloon_tip.py  button_displays.py  calendar.py  chat.py  displays.py  displays.txt  ll.py  old_displays.py  tester_ll.py  working_displays.py
aplustools/myne/: __init__.py  genpass.py  hasher.py
aplustools/package/: IMPORTANT.txt  __init__.py  _direct_functions.py  argu_mint.py  argu_mint_new.py  argumint.py  lazy_loader.py  options.py  tes.py  test.py  timid.py  tt.py
aplustools/security/: __init__.py  _direct_functions.py  ciphertext.txt  crypto.py  database.py  passwords.py  plaintext.txt  rand.py  random.py
aplustools/security/dicts/: google-10000-dict.txt  scowl-50-dict.txt  scowl-80-dict.txt
aplustools/security/protocols/: control_code_protocol.py  secure_message.py  secure_socket.py  socket_stream.py  tesat.py  test.py  testtt.py
aplustools/tests/: test_data.py  test_general.py  test_io.py  test_package.py  test_utils.py
aplustools/utils/: __init__.py  _direct_functions.py  compressor.py  direct_functions.py  dummy.py  genpass.py  hasher.py  imagetools.py  mappers.py
aplustools/web/: __init__.py  _direct_functions.py  actual_webtools.py  direct_functions.py  new_webtools.py  request.py  search.py  utils.py  webtools.py  webtools_actual.py
docs/source/: aplustools.data.rst  aplustools.io.rst  aplustools.package.rst  aplustools.rst  aplustools.security.crypto.algos.rst  aplustools.security.crypto.rst  aplustools.security.rst  aplustools.tests.rst  aplustools.tests.test_data.rst  aplustools.tests.test_io.rst  aplustools.tests.test_package.rst  aplustools.tests.test_security.rst  aplustools.tests.test_web.rst  aplustools.web.rst  conf.py  index.rst  modules.rst
scrapped/: _direct.py  actdirect.py  prot.py  qtquick.py  test_direct.py  test_qtquick.py
scrapped/cert/: __init__.py  _ca.py  _certificate.py  _name.py
scripts/: generate_coverage_badge.py  list_package.py
src/: tes.py
src/aplustools/: __init__.py  _cli.py  _direct.py  _direct_functions.py  cli.py
src/aplustools/data/: __init__.py  _database_new.py  _direct.py  _direct_functions.py  _small_test.py  _test.py  advanced_imagetools.py  bintools.py  compressor_n.py  database_new.py  dummy.py  faker.py  faker_pro.py  github-updater-cmd.py  github-updater-gui.py  imagetools.py  noise.py  small_test.py  storage.py  test.py  unien.py
src/aplustools/io/: __init__.py  _direct.py  _direct_functions.py  actdirect.py  concurrency.py  env.py  environment.py  fileio.py  limmer.txt  loggers.py  qtquick.py
src/aplustools/io/gui/: __init__.py  _direct.py  _direct_functions.py  actdirect.py  balloon_tip.py  button_displays.py  cal.py  chat.py  displays.py  layouts.py  ll.py  quick.py  tes.py  tesla.py  tesss.py  test.py  themes  working_displays.py
src/aplustools/package/: __init__.py  _direct.py  _direct_functions.py  argumint.py  autocli.py  chronokit.py  timid.py
src/aplustools/security/: __init__.py  _direct.py  _direct_functions.py  crypto.py  crypto2.py  database.py  memprot.py  passwords.py  prot.py  rand.py  seed_file.enc  test.py  unsafe.py
src/aplustools/security/crypto/: __init__.py  _algorithms.py  _argon2_cffi.py  _bcrypt.py  _definitions.py  _hashes.py  _keys.py  _std_lib.py  algorithms.py  backends.py  exceptions.py  hash.py  keys.py
src/aplustools/security/dicts/: scowl-60-dict.txt  scowl-70-dict.txt
src/aplustools/security/protocols/: __init__.py  control_code_protocol.py  message_handler.py  secure_message.py  secure_socket.py  socket_stream.py
src/aplustools/tests/: test_data.py  test_general.py  test_io.py  test_package.py  test_security.py  test_utils.py  test_web.py
src/aplustools/tests/test_data/: test_bintools.py  test_direct.py  test_dummy.py  test_storage.py
src/aplustools/tests/test_io/: test_actdirect.py  test_concurrency.py  test_direct.py  test_env.py  test_fileio.py  test_qtquick.py
src/aplustools/tests/test_package/: test_argumint.py  test_direct.py  test_timid.py
src/aplustools/tests/test_security/: general.py  (+1 more)
src/aplustools/utils/: __init__.py  _direct_functions.py
src/aplustools/web/: __init__.py  _direct.py  _direct_functions.py  request.py  search.py  utils.py
test_data/: cu.txt  test.db
tests/: test_data.py  test_general.py  test_general_2.py  test_io.py  test_package.py  test_updater.py  test_utils.py  test_web.py
(+24 files in other folders)
