[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aplustools", "aplustools.data", "aplustools.io", "aplustools.utils", "aplustools.web", "aplustools.package", "aplustools.tests", "aplustools.io.gui"]

[project]
name = "aplustools"
version = "1.4.9"
dependencies = [
  "requests>=2.31.0",
  "BeautifulSoup4>=4.12.2",
#   "win32api; os_name == 'nt'",
]
requires-python = ">= 3.9"
authors = [
  {name = "Cariel Becker", email = "cariel.becker@gmx.de"},
]
maintainers = [
  {name = "Cariel Becker", email = "cariel.becker@gmx.de"},
]
description = "A collection of helpful tools"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "GPL-3.0-or-later"} # or "GPL-3.0-only"
keywords = ["general", "tools", "app tools", "beta", "apt"]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Programming Language :: Python",
	"Natural Language :: English"
]

[project.optional-dependencies]
data = [
  "PySide6>=6.6.1",
  "Pillow>=10.3.0",
  "aiohttp>=3.9.3",
  "opencv-python>=4.9.0.80",
  "pillow_heif==0.15.0",
  "numpy==1.26.4"
]
web = ["duckduckgo_search>=3.9.6"]
utils = [
  "cryptography>=42.0.5",
  "brotli>=1.1.0",
  "zstandard>=0.22.0",
  "py7zr>=0.21.0"
]
dev = ["pytest"]

[project.urls]
Home = "https://pypi.org/project/aplustools/"
Repository = "https://github.com/adalfarus/aplustools"
Documentation = "https://github.com/adalfarus/aplustools/wiki"
"Issue tracker" = "https://github.com/adalfarus/aplustools/issues"

#[tool.pytest.ini_options]
## This is equivalent to setup_requires and tests_require
## Add your pytest configuration here
#addopts = "your pytest options"

[project.scripts]
apt = "aplustools.cli:apt_cli"
pype = "aplustools.cli:pype_command"
upype = "aplustools.cli:upype_command"
