[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aplustools", "aplustools.data", "aplustools.io", "aplustools.utils", "aplustools.web", "aplustools.package", "aplustools.tests", "aplustools.io.gui", "aplustools.security", "aplustools.security.protocols"]

[project]
name = "aplustools"
version = "1.5.0"
dependencies = []
requires-python = ">= 3.10"
authors = [
  {name = "Cariel Becker", email = "cariel.becker@gmx.de"},
]
maintainers = [
  {name = "Cariel Becker", email = "cariel.becker@gmx.de"},
]
description = "A collection of helpful tools"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "LGPL-2.1-or-later"}
keywords = ["general", "tools", "app tools", "production", "apt"]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
	"Development Status :: 5 - Production/Stable",
	"Programming Language :: Python",
	"Natural Language :: English"
]

[project.optional-dependencies]
data = [
  "PySide6>=6.7.0",
  "Pillow>=10.3.0",
  "aiohttp>=3.9.3",
  "opencv-python>=4.9.0.80",
  "pillow_heif==0.15.0",
  "numpy==1.26.4",
  "brotli>=1.1.0",
  "zstandard>=0.22.0",
  "py7zr>=0.21.0",
  "requests>=2.32.0",
  "BeautifulSoup4>=4.12.2"]
io = [
  "speedtest-cli==2.1.3",
  "windows-toasts==1.1.1; os_name == 'nt'",
  "PySide6>=6.7.0"]
package = ["numpy==1.26.4"]
security = ["cryptography>=42.0.5", "quantcrypt==0.4.2"]
web = ["requests>=2.32.0", "BeautifulSoup4>=4.12.2"]
dev = ["pytest"]

[project.urls]
Home = "https://pypi.org/project/aplustools/"
Repository = "https://github.com/adalfarus/aplustools"
Documentation = "https://github.com/adalfarus/aplustools/wiki"
"Issue tracker" = "https://github.com/adalfarus/aplustools/issues"

#[tool.pytest.ini_options]
## This is equivalent to setup_requires and tests_require
## Add your pytest configuration here
#addopts = "your pytest options"

[project.scripts]
apt = "aplustools.cli:apt_cli"
pype = "aplustools.cli:pype_command"
upype = "aplustools.cli:upype_command"
